# wasm-game-of-life

./: Cargo.toml  LICENSE_MIT
.github/workflows/: main_collin-codes.yml
src/: lib.rs  shapes.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
