[package]
name = "collinsc-wasm-game-of-life"
version = "0.1.4"
authors = ["collinsc <collinsconway@gmail.com>"]
edition = "2018"
description = "Wasm game of life w/ efficient memory representation."
repository = "https://github.com/collinsc/wasm-game-of-life"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.63"
fixedbitset = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
